index的echarts可视化表更新成功

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
+    <link rel="icon" href="http://mall.newbee.ltd/favicon.ico">
+    <title>vue3-admin</title>
+</head>
+
+<body>
     <div id="app"></div>
+    <!-- 在这里新建一个index.html，是为了引入echarts.js -->
+    <script src="https://s.yezgea02.com/1609305532675/echarts.js"></script>
     <script type="module" src="/src/main.js"></script>
-  </body>
+</body>
+
 </html>
